<resources>
    <string name="facebook_app_id">118079708814492</string>
    <string name="fb_login_protocol_scheme">fb118079708814492</string>
    <string name="app_name">Babá Digital</string>
    <string name="notificacao_descricao_muitas">Vacinas pendentes!</string>
    <string name="notificacao_descricao">Vacina </string>
    <string name="notificacao_disponivel">pendente! </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inicio">Início</string>
    <string name="deleteSucesso">Apagado com sucesso!</string>
    <string name="deleteFalha">Falha ao tentar apagar!</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

    l is A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_login">Entrar</string>
    <string name="title_activity_boas_vindas">Bem-vindo(a)</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="loginActivity_btnCadastrar">Cadastrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Este endereço de e-mail é inválido!</string>
    <string name="error_invalid_password">Senha muito curta!</string>
    <string name="error_incorrect_password">Senha incorreta!</string>
    <string name="error_field_required">Este campo é necessário</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrarFacebook">Entrar com Facebook</string>
    <string name="cadastre_se">Cadastre-se!</string>
    <string name="errorConexao">Falha de conexão!</string>
    <string name="menuPrincipal">Menu Principal</string>
    <string name="title_activity_para_apagar">paraApagar</string>
    <string name="nomeUsuario">Nome completo de usuário</string>
    <string name="criancas">Crianças : </string>
    <string name="qt">0</string>
    <string name="notificacao">Notificações :</string>
    <string name="criancass">Crianças</string>
    <string name="textCriancas">Veja aqui as crianças cadastradas. Você pode editar, adcionar ou remover.</string>
    <string name="caderneta">Caderneta</string>
    <string name="cadernetaText">Gerencie as vacinas de suas crianças.</string>
    <string name="informacoes">Informações</string>
    <string name="informacoesText">Leia informacões sobre vacinas e onde podem ser encontradas.</string>
    <string name="vacinas">Notícias</string>
    <string name="noticiasText">Veja notícias e dicas exclusivas de saúde.</string>
    <string name="configuracoes">Configurações</string>
    <string name="configuracoesText">Ative ou desative notificações deste aplicativo.</string>
    <string name="title_activity_outraapagar">outraapagar</string>
    <string name="dadosUsuario">Dados de usuário</string>
    <string name="title_activity_cadastrar">CadastrarActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="nome">Nome do responsável*</string>
    <string name="emailO">E-mail*</string>
    <string name="cidadeObrigatorio">O campo cidade é obrigatório!</string>
    <string name="senhaO">Senha*</string>
    <string name="telefone">Telefone fixo</string>
    <string name="Celular">Celular*</string>
    <string name="dataNascimento">Data de nascimento*</string>
    <string name="cidade">Cidade*</string>
    <string name="Estado">Estado*</string>
    <string name="cadastro">Cadastro</string>
    <string name="numero">Número</string>
    <string name="rua">Rua(Opcional)</string>
    <string name="pais">País(Opcional)</string>
    <string-array name="sexo">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>
    <string name="endereço">Endereço</string>
    <string name="bairro">Bairro(Opcional)</string>
    <string name="complemento">Complemento(Opcional)</string>
    <string name="cpf">CPF* (apenas números)</string>
    <string name="registrar">Registrar</string>
    <string name="cadastro_erroNomeIvalido">Nome digitado não parece válido!</string>
    <string name="cadastro_erroCPF">O campo cpf é obrigatório!</string>
    <string name="cadastro_erroNomeVazio">O campo nome está vazío!</string>
    <string name="cadastro_erroEmailIvalido">O email digitado não parece válido!</string>
    <string name="cadastro_erroSenhaCurta">Senha muito curta!</string>
    <string name="cadastro_erroCelularVazio">O campo celular está vazio!</string>
    <string name="cadastro_erroCidadeVazio">O campo cidade está vazio!</string>
    <string name="cadastro_erroRuaVazio">O campo rua está vazio!</string>
    <string name="cadastro_erroPaisIvalido">O país não parece válido!</string>
    <string name="cadastro_erroBairroVazio">O campo bairro está vazio!</string>
    <string name="cadastro_erroDataNascimentoInvalido">A data de nascimento não parece válida!</string>
    <string name="cadastro_erroSelecioneSexo">Selecione um sexo!</string>
    <string name="cadastro_erroEstadoVazio">Selecione um estado!</string>
    <string name="confirmarSenha">Confirmar senha*</string>
    <string name="cadastro_erroSenhaNaoConferem">Senhas não conferem!</string>
    <string name="cadastro_erroSenhaMuitoCurta">Senhas muito curtas</string>
    <string name="cadastro_erroCampoSenhaVazio">O campo senha está vazio</string>
    <string name="cadastro_erroCampoConfirmarSenhaVazio">O campo confirmar senha está vazio</string>
    <string name="cadastradoSucesso">Cadastrado com sucesso!</string>
    <string name="falha">Falha</string>
    <string name="falhaConexao">Falha na conexão</string>
    <string name="emailExist">Email já existe!</string>
    <string name="sair">Sair</string>
    <string name="configConta">Conta</string>
    <string name="publica">Pública</string>
    <string name="particular">Particular</string>
    <string name="publicaParticular">Pública/Particular</string>
</resources>